[gd_scene load_steps=5 format=3 uid="uid://g4nw5kidymtk"]

[ext_resource type="Script" path="res://code/options.gd" id="1_lehdf"]
[ext_resource type="Theme" uid="uid://c6llbdy6r04d0" path="res://resources/themes/menus.tres" id="2_3ftmw"]
[ext_resource type="Texture2D" uid="uid://qo45bfet8ogt" path="res://resources/hud/Big title.png" id="2_nobnu"]
[ext_resource type="AudioStream" uid="uid://bf5oocl03idr5" path="res://resources/sfx/Collect.wav" id="4_agppr"]

[node name="Options" type="CanvasLayer"]
process_mode = 2
layer = 20
script = ExtResource("1_lehdf")

[node name="Fade" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -679.0
offset_right = 1400.0
offset_bottom = 961.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.82, 0.82)
texture = ExtResource("2_nobnu")

[node name="Background" type="ColorRect" parent="."]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -400.0
offset_right = 800.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="BigCont" type="VBoxContainer" parent="Background"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_3ftmw")
theme_override_constants/separation = 24
alignment = 1

[node name="OptionsHolder" type="VBoxContainer" parent="Background/BigCont"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24
alignment = 1

[node name="SFX" type="VBoxContainer" parent="Background/BigCont/OptionsHolder"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/BigCont/OptionsHolder/SFX"]
layout_mode = 2
text = "SFX
"
horizontal_alignment = 1

[node name="Bar" type="HSlider" parent="Background/BigCont/OptionsHolder/SFX"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Music" type="VBoxContainer" parent="Background/BigCont/OptionsHolder"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/BigCont/OptionsHolder/Music"]
layout_mode = 2
text = "Music
"
horizontal_alignment = 1

[node name="Bar" type="HSlider" parent="Background/BigCont/OptionsHolder/Music"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Detailed" type="VBoxContainer" parent="Background/BigCont/OptionsHolder/Music"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 4

[node name="Stage" type="VBoxContainer" parent="Background/BigCont/OptionsHolder/Music/Detailed"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/BigCont/OptionsHolder/Music/Detailed/Stage"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Stage Music"
horizontal_alignment = 1

[node name="Bar" type="HSlider" parent="Background/BigCont/OptionsHolder/Music/Detailed/Stage"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Emotion" type="VBoxContainer" parent="Background/BigCont/OptionsHolder/Music/Detailed"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/BigCont/OptionsHolder/Music/Detailed/Emotion"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Emotions Music"
horizontal_alignment = 1

[node name="Bar" type="HSlider" parent="Background/BigCont/OptionsHolder/Music/Detailed/Emotion"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Location" type="VBoxContainer" parent="Background/BigCont/OptionsHolder/Music/Detailed"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/BigCont/OptionsHolder/Music/Detailed/Location"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Locations Music"
horizontal_alignment = 1

[node name="Bar" type="HSlider" parent="Background/BigCont/OptionsHolder/Music/Detailed/Location"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="MainButtons" type="HBoxContainer" parent="Background/BigCont"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Ok" type="Button" parent="Background/BigCont/MainButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
text = "Ok"
flat = true

[node name="Reset" type="Button" parent="Background/BigCont/MainButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
text = "Reset"
flat = true

[node name="Cancel" type="Button" parent="Background/BigCont/MainButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
text = "Cancel"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Background/BigCont"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/BigCont/HBoxContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2

[node name="Title" type="Button" parent="Background/BigCont/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
text = "Title"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_agppr")
volume_db = 24.0
bus = &"SFX"

[connection signal="drag_ended" from="Background/BigCont/OptionsHolder/SFX/Bar" to="." method="_on_sfx_drag_ended"]
[connection signal="drag_started" from="Background/BigCont/OptionsHolder/SFX/Bar" to="." method="_on_sfx_drag_started"]
[connection signal="value_changed" from="Background/BigCont/OptionsHolder/SFX/Bar" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="Background/BigCont/OptionsHolder/Music/Bar" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Background/BigCont/OptionsHolder/Music/Detailed/Stage/Bar" to="." method="_on_stage_value_changed"]
[connection signal="value_changed" from="Background/BigCont/OptionsHolder/Music/Detailed/Emotion/Bar" to="." method="_on_emot_value_changed"]
[connection signal="value_changed" from="Background/BigCont/OptionsHolder/Music/Detailed/Location/Bar" to="." method="_on_loc_value_changed"]
[connection signal="pressed" from="Background/BigCont/MainButtons/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Background/BigCont/MainButtons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Background/BigCont/MainButtons/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Background/BigCont/HBoxContainer/HBoxContainer2/Title" to="." method="_on_title_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
